WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320501
[cleanup] Fix the layering between the flex formatting context and its integration
https://bugs.webkit.org/show_bug.cgi?id=320501
Summary
[cleanup] Fix the layering between the flex formatting context and its integr...
alan
Reported
2026-07-28 15:43:22 PDT
ssia
Attachments
Patch
(15.59 KB, patch)
2026-07-28 15:55 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(15.59 KB, patch)
2026-07-28 19:39 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-07-28 15:55:07 PDT
Created
attachment 480864
[details]
Patch
alan
Comment 2
2026-07-28 19:39:12 PDT
Created
attachment 480869
[details]
[fast-cq]Patch
EWS
Comment 3
2026-07-29 05:09:11 PDT
Committed
318153@main
(4a230cd0dad3): <
https://commits.webkit.org/318153@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 480869
[details]
.
Radar WebKit Bug Importer
Comment 4
2026-07-29 05:10:15 PDT
<
rdar://problem/183515789
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug