Source/WebCore/layout/integration/flex/FlexItemContentCache.h
@@ -31,6 +31,7 @@
 #include <wtf/WeakRef.h>
 
 namespace WebCore {
+namespace LayoutIntegration {
 
 // FlexItemContentCache caches per-flex-item measurements for subsequent layouts.
 class FlexItemContentCache {
@@ -56,4 +57,5 @@ private:
     HashMap<SingleThreadWeakRef<const RenderBox>, LayoutUnit> m_contentLogicalHeights;
 };
 
+} // namespace LayoutIntegration
 } // namespace WebCore
