Source/WebCore/Headers.cmake
@@ -1769,7 +1769,6 @@ set(WebCore_PRIVATE_FRAMEWORK_HEADERS
 
     layout/formattingContexts/flex/FlexFormattingContext.h
     layout/formattingContexts/flex/FlexFormattingUtils.h
-    layout/formattingContexts/flex/FlexItemContentCache.h
     layout/formattingContexts/flex/FlexLayoutState.h
 
     layout/formattingContexts/grid/AxisConstraint.h
@@ -1824,6 +1823,7 @@ set(WebCore_PRIVATE_FRAMEWORK_HEADERS
     layout/integration/LayoutIntegrationUtils.h
 
     layout/integration/flex/FlexIntegrationUtils.h
+    layout/integration/flex/FlexItemContentCache.h
     layout/integration/flex/LayoutIntegrationFlexLayout.h
 
     layout/integration/grid/LayoutIntegrationGridLayout.h
